deploy/w3f/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: din-eliza-app
  name: din-eliza-app
  namespace: din-eliza
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: din-eliza-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: din-eliza-app
    spec:
      containers:
        - name: din-elia
          image: 992382680272.dkr.ecr.eu-west-3.amazonaws.com/sandbox-dev-din-eliza:main-xxxxxxx
          command:
            - node
          args:
            - dist/server.js
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 300m
              memory: 1Gi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 5
