deploy/w3f/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: din-eliza-app
  namespace: din-eliza
  labels:
    app.kubernetes.io/name: din-eliza-app
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: slack
      port: 3069
      protocol: TCP
      targetPort: 3069
  selector:
    app.kubernetes.io/name: din-eliza-app
